RESOLVED FIXED204079
Empty property sets should not mark MatchedProperties uncacheable
https://bugs.webkit.org/show_bug.cgi?id=204079
Summary Empty property sets should not mark MatchedProperties uncacheable
Antti Koivisto
Reported 2019-11-11 12:11:58 PST
Fix
Attachments
patch (1.45 KB, patch)
2019-11-11 12:14 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2019-11-11 12:14:25 PST
WebKit Commit Bot
Comment 2 2019-11-11 14:44:03 PST
Comment on attachment 383287 [details] patch Clearing flags on attachment: 383287 Committed r252339: <https://trac.webkit.org/changeset/252339>
WebKit Commit Bot
Comment 3 2019-11-11 14:44:05 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-11-11 16:53:05 PST
Note You need to log in before you can comment on or make changes to this bug.