Empty property sets should not mark MatchedProperties uncacheable https://bugs.webkit.org/show_bug.cgi?id=204079

Reviewed by Zalan Bujtas.

* css/ElementRuleCollector.cpp:
(WebCore::ElementRuleCollector::addElementStyleProperties):

Bail out if there are no incoming properties.


Canonical link: https://commits.webkit.org/217396@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252339 268f45cc-cd09-0410-ab3c-d52691b4dbfc